--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" href="/src/styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.14.0.css"> <!-- Added QUnit CSS here -->
+  <link rel="stylesheet" href="https://code.jquery.com/qunit-unit@2.24.0css"> <!-- Added QUnit CSS here -->
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 
